--- a/src/components/common/languageSelector/languageSelector.css
+++ b/src/components/common/languageSelector/languageSelector.css
@@ -2,8 +2,12 @@
     position: relative;
 }
 
-.language-button {
+.language-button{
     padding: 8px 12px;
+    transition: transform 0.3s ease-in-out;
+}
+.language-button:hover{
+    transform: scale(1.35);
 }
 
 .translate-icon {
