--- a/src/components/layout/footer/footer.css
+++ b/src/components/layout/footer/footer.css
@@ -3,7 +3,13 @@ footer{
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    
     background-color: var(--secondary);
     color: #1a202d;
+}
+
+.arrow-icon{
+transition: transform 0.3s ease-in-out;
+}
+.arrow-icon:hover{
+    transform: scale(1.35);
 }
