--- a/src/components/sections/aboutSection/aboutSection.css
+++ b/src/components/sections/aboutSection/aboutSection.css
@@ -1,23 +1,29 @@
 .container-about{
     align-items: center;
-    padding: 40px 0;
     text-align: center;
+    scroll-margin-top: 70px;
 }
 .title-about{
     font-size: 48px;
     font-weight: bold;
     padding: 10px;
     background-color: var(--primary);
-    margin-bottom: 40px;
 }
-.description-about{
-    font-size: 20px;
-    margin-bottom: 30px;
+.description-container{
+    margin: 40px auto;
     border: 2px solid var(--accent);
     border-radius: 8px;
     width: 70%;
-    margin: auto;
     padding: 20px;
-    text-align: justify;
     background-color: var(--background-secondary);
+    box-shadow: 0px 4px 10px -3px var(--accent);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.description-container:hover{
+    transform: translateY(-2px);
+    box-shadow: 0px 8px 20px -2px var(--accent);
+}
+.description-about{
+    font-size: 20px;
+    text-align: justify;
 }
