--- a/src/components/sections/educationSection/educationSection.css
+++ b/src/components/sections/educationSection/educationSection.css
@@ -1,7 +1,7 @@
 .container-education{
     align-items: center;
-    padding: 40px 0;
     text-align: center;
+    scroll-margin-top: 70px;
 }
 
 .title-education{
@@ -9,9 +9,10 @@
     font-weight: bold;
     padding: 10px;
     background-color: var(--primary);
-    margin-bottom: 40px;
 }
-
+.educations-container{
+    margin: 40px auto;
+}
 .education-container-1{
     font-size: 20px;
     width: 70%;
@@ -20,15 +21,28 @@
     border-radius: 8px;
     margin-bottom: 30px;
     background-color: var(--background-secondary);
+    box-shadow: 0px 4px 10px -3px var(--accent);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.education-container-1:hover{
+    transform: translateY(-2px);
+    
+    box-shadow: 0px 8px 20px -2px var(--accent);
 }
 .education-container-2{
     font-size: 20px;
-    margin-bottom: 30px;
     width: 70%;
     margin: auto;
     border: 2px solid var(--accent);
     border-radius: 8px;
     background-color: var(--background-secondary);
+    box-shadow: 0px 4px 10px -3px var(--accent);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.education-container-2:hover{
+    transform: translateY(-2px);
+    
+    box-shadow: 0px 8px 20px -2px var(--accent);
 }
 .education-title{
     padding: 20px;
